# rust-examples

./: .env-example  .gitignore  Cargo.toml  README.md
common/: Cargo.toml
common/src/: lib.rs
examples/recurring/: Cargo.toml
examples/recurring/src/: main.rs
examples/swap/: Cargo.toml
examples/swap/src/: main.rs
examples/swap_instruction/: Cargo.toml
examples/swap_instruction/src/: main.rs
examples/trigger/: Cargo.toml
examples/trigger/src/: main.rs
examples/ultra/: Cargo.toml
examples/ultra/src/: main.rs
