[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest       = { version = "0.11", features = ["json", "rustls-tls"] }
serde         = { version = "1.0", features = ["derive"] }
serde_json    = "1.0"
dotenv        = "0.15"
tokio         = { version = "1.14", features = ["macros", "rt-multi-thread"] }
solana-client = "1.18.26"
solana-sdk    = "1.18.26"
solana-program= "1.18.26"
base64        = "0.13"
anyhow        = "1.0"
bs58          = "0.4"
bincode       = "1.3"
